@@ -924,7 +924,7 @@ BEGIN
                     WS_GROUP
 END
 
-IDD_HTML DIALOG DISCARDABLE  0, 0, 187, 159
+IDD_HTML DIALOG DISCARDABLE  0, 0, 187, 172
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "HTML Options"
 FONT 8, "MS Sans Serif"
@@ -946,9 +946,11 @@ BEGIN
                     104,60,8
     CONTROL         "Highlight new pieces",IDC_HTMDLG_HIGHLIGHT,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,128,84,8
-    LTEXT           "Output folder",IDC_STATIC,7,143,46,8
-    EDITTEXT        IDC_HTMDLG_OUTPUT,56,142,112,10,ES_AUTOHSCROLL
-    PUSHBUTTON      "...",IDC_HTMDLG_BROWSEFOLDER,172,142,8,10
+    CONTROL         "Use .html extension",IDC_HTMLDLG_HTMLEXT,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,140,100,8
+    LTEXT           "Output folder",IDC_STATIC,7,156,46,8
+    EDITTEXT        IDC_HTMDLG_OUTPUT,55,155,112,10,ES_AUTOHSCROLL
+    PUSHBUTTON      "...",IDC_HTMDLG_BROWSEFOLDER,172,155,8,10
     DEFPUSHBUTTON   "OK",IDOK,139,11,41,14
     PUSHBUTTON      "Cancel",IDCANCEL,139,28,41,14
     PUSHBUTTON      "Images...",IDC_HTMDLG_IMAGEOPTIONS,139,45,41,14
@@ -1499,7 +1501,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 180
         TOPMARGIN, 7
-        BOTTOMMARGIN, 152
+        BOTTOMMARGIN, 165
     END
 
     IDD_PROGRESS, DIALOG
